--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php": "^7.2|^8.0",
         "ext-json": "*",
         "ext-mbstring": "*",
+        "illuminate/console": "^5.5|^6.0|^7.0|^8.0|^9.0",
         "illuminate/database": "^5.5|^6.0|^7.0|^8.0|^9.0",
         "illuminate/queue": "^5.5|^6.0|^7.0|^8.0|^9.0",
         "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^9.0",
